# brine-kiwi

./: .release.toml  Cargo.toml  Makefile  README.md  src.rs
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: compiler.rs  gen_rust.rs  lib.rs  traits.rs  types.rs  utils.rs
compiler/tests/: compile_test.rs
example/: Cargo.toml  README.md  run-example.sh  simple.kiwi
example/src/: generated.rs  main.rs
schema/: Cargo.toml  README.md
schema/src/: bb.rs  lib.rs  schema.rs  value.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
src/: compiler.rs  error.rs  gen_rust.rs  lib.rs  parser.rs  tokenizer.rs  traits.rs  types.rs  utils.rs  verifier.rs
tests/: compile_test.rs
