[package]
name                  = "brine-kiwi-schema"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
homepage.workspace    = true
repository.workspace  = true
readme.workspace      = true
keywords.workspace    = true

documentation = "https://docs.rs/brine-kiwi-schema"

[dependencies]
