[package]
name                  = "brine-kiwi-schema"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
homepage.workspace    = true
repository.workspace  = true
readme.workspace      = true
keywords.workspace    = true
description           = "Schema definitions for the Brine Kiwi language, used by the compiler and runtime"

documentation = "https://docs.rs/brine-kiwi-schema"

[dependencies]
