[package]
name                  = "brine-kiwi"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
homepage.workspace    = true
repository.workspace  = true
readme.workspace      = true
keywords.workspace    = true
description.workspace = true

documentation = "https://docs.rs/brine-kiwi"

[dependencies]
brine-kiwi-compiler.workspace = true
brine-kiwi-schema.workspace   = true

serde.workspace       = true
serde_json.workspace  = true
